--- a/java/build.gradle
+++ b/java/build.gradle
@@ -16,11 +16,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 
-    implementation('org.apache.commons:commons-lang3:3.12.0')
-    implementation('org.apache.commons:commons-collections4:4.4')
-    implementation('com.google.guava:guava:30.1.1-jre')
-
-
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'com.google.guava:guava:30.1.1-jre'
 }
 
 test {
