--- a/java/build.gradle
+++ b/java/build.gradle
@@ -18,15 +18,21 @@ dependencies {
 
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation 'com.google.guava:guava:30.1.1-jre'
-    implementation 'com.google.guava:guava:19.0'
+    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'com.google.guava:guava:23.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
     testCompileOnly 'org.projectlombok:lombok:1.18.22'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
-    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.8.1'
+    implementation 'nl.jqno.equalsverifier:equalsverifier:3.8.1'
+
+    implementation 'org.postgresql:postgresql:42.3.1'
+    implementation 'io.github.cdimascio:dotenv-java:2.2.0'
+
+
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
