--- a/java/build.gradle
+++ b/java/build.gradle
@@ -26,11 +26,20 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.22'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
-    implementation 'nl.jqno.equalsverifier:equalsverifier:3.8.1'
+    implementation 'nl.jqno.equalsverifier:equalsverifier:3.8.2'
 
+    def oracleJdbcVersion = '21.4.0.0'
     implementation 'org.postgresql:postgresql:42.3.1'
-    implementation 'io.github.cdimascio:dotenv-java:2.2.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:' + oracleJdbcVersion
+    implementation 'com.oracle.database.jdbc:ucp:' + oracleJdbcVersion
+    implementation 'mysql:mysql-connector-java:8.0.25'
 
+    implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'org.hibernate:hibernate-core:5.6.3.Final'
+
+    implementation 'org.eclipse.persistence:eclipselink:3.0.2'
+    implementation 'org.eclipse.persistence:jakarta.persistence:2.2.2'
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
 
     implementation 'com.github.javafaker:javafaker:1.0.2'
 }
