--- a/java/docker/docker-compose.template.yml
+++ b/java/docker/docker-compose.template.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ${POSTGRES_VOLUME_NAME}:${CONTAINER_POSTGRES_DATA}
       - ${POSTGRES_INIT_SCRIPTS}:${CONTAINER_POSTGRES_INIT_SCRIPTS}
+      - ${POSTGRES_INIT_SCRIPTS_2}:${CONTAINER_POSTGRES_INIT_SCRIPTS_2}
     ports:
       - ${POSTGRES_PORT}:${CONTAINER_POSTGRES_PORT}
   ${MYSQL_SERVICE_NAME}:
