Added entity base annotations and hibernate entity identifiers examples. Some refactoring was made.

--- a/java/docker/docker-compose.template.yml
+++ b/java/docker/docker-compose.template.yml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - ${POSTGRES_VOLUME_NAME}:${CONTAINER_POSTGRES_DATA}
-      - ${POSTGRES_INIT_SCRIPTS}:${CONTAINER_POSTGRES_INIT_SCRIPTS}
+      - ${POSTGRES_INIT_SCRIPTS_1}:${CONTAINER_POSTGRES_INIT_SCRIPTS_1}
       - ${POSTGRES_INIT_SCRIPTS_2}:${CONTAINER_POSTGRES_INIT_SCRIPTS_2}
     ports:
       - ${POSTGRES_PORT}:${CONTAINER_POSTGRES_PORT}
