--- a/java/build.gradle
+++ b/java/build.gradle
@@ -48,3 +48,14 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+task printSourceSetInformation(){
+    doLast{
+        sourceSets.each { srcSet ->
+            println "["+srcSet.name+"]"
+            print "-->Source directories: "+srcSet.allJava.srcDirs+"\n"
+            print "-->Output directories: "+srcSet.output.classesDirs.files+"\n"
+            println ""
+        }
+    }
+}
