--- a/java/build.gradle
+++ b/java/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.github.javafaker:javafaker:1.0.2'
 
     implementation 'org.aspectj:aspectjrt:1.9.5'
+    implementation 'org.aspectj:aspectjweaver:1.9.5'
 }
 
 test {
