Try-catch-finally and hibernate examples was updated; new hibernate relationship example was added; collections benchmark was refactored

--- a/java/docker/docker-compose.template.yml
+++ b/java/docker/docker-compose.template.yml
@@ -13,6 +13,7 @@ services:
       - ${POSTGRES_VOLUME_NAME}:${CONTAINER_POSTGRES_DATA}
       - ${POSTGRES_INIT_SCRIPTS_1}:${CONTAINER_POSTGRES_INIT_SCRIPTS_1}
       - ${POSTGRES_INIT_SCRIPTS_2}:${CONTAINER_POSTGRES_INIT_SCRIPTS_2}
+      - ${POSTGRES_INIT_SCRIPTS_4}:${CONTAINER_POSTGRES_INIT_SCRIPTS_4}
     ports:
       - ${POSTGRES_PORT}:${CONTAINER_POSTGRES_PORT}
   ${MYSQL_SERVICE_NAME}:
