--- a/java/docker/docker-compose.yml
+++ b/java/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - examples_jpa_postgres_volume:/var/lib/postgresql/data
       - ./sql_scripts/1.example.sql:/docker-entrypoint-initdb.d/1.example.sql
       - ./sql_scripts/2.example.sql:/docker-entrypoint-initdb.d/2.example.sql
+      - ./sql_scripts/4.example.sql:/docker-entrypoint-initdb.d/4.example.sql
     ports:
       - 5432:5432
   examples-jpa-mysql:
