SQL-scripts were updated

--- a/java/docker/docker-compose.template.yml
+++ b/java/docker/docker-compose.template.yml
@@ -11,6 +11,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - ${POSTGRES_VOLUME_NAME}:${CONTAINER_POSTGRES_DATA}
+      - ${POSTGRES_INIT_SCRIPTS_0}:${CONTAINER_POSTGRES_INIT_SCRIPTS_0}
       - ${POSTGRES_INIT_SCRIPTS_1}:${CONTAINER_POSTGRES_INIT_SCRIPTS_1}
       - ${POSTGRES_INIT_SCRIPTS_2}:${CONTAINER_POSTGRES_INIT_SCRIPTS_2}
       - ${POSTGRES_INIT_SCRIPTS_4}:${CONTAINER_POSTGRES_INIT_SCRIPTS_4}
