--- a/java/build.gradle
+++ b/java/build.gradle
@@ -26,6 +26,9 @@ compileTestJava.options.encoding = 'UTF-8'
 compileJava.ajc.options.compilerArgs = ["-sourceroots", "../../../src/main/java/core/concurrency/thread/ex2"]
 
 dependencies {
+    implementation 'org.apache.logging.log4j:log4j-api:2.12.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.12.1'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
