--- a/java/build.gradle
+++ b/java/build.gradle
@@ -26,9 +26,10 @@ compileTestJava.options.encoding = 'UTF-8'
 compileJava.ajc.options.compilerArgs = ["-sourceroots", "../../../src/main/java/core/concurrency/thread/ex2"]
 
 dependencies {
+    implementation 'org.jboss.logging:jboss-logging:3.2.0.Final'
     implementation 'org.apache.logging.log4j:log4j-api:2.12.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.12.1'
-
+    implementation 'org.slf4j:slf4j-log4j12:1.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
