--- a/java/build.gradle
+++ b/java/build.gradle
@@ -32,7 +32,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
 
     implementation 'com.nurkiewicz.lazyseq:lazyseq:0.0.1'
-    implementation 'io.projectreactor:reactor-core:3.3.9.RELEASE'
 
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.commons:commons-collections4:4.4'
@@ -63,6 +62,11 @@ dependencies {
 
     implementation 'org.aspectj:aspectjrt:1.9.5'
     implementation 'org.aspectj:aspectjweaver:1.9.5'
+
+    implementation 'io.projectreactor:reactor-core:3.6.0'
+    implementation 'ch.qos.logback:logback-classic:1.4.4'
+
+    implementation 'org.assertj:assertj-core:3.4.1'
 }
 
 test {
