--- a/java/build.gradle
+++ b/java/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'org.aspectj:aspectjweaver:1.9.5'
 
     implementation 'io.projectreactor:reactor-core:3.6.0'
+    implementation 'io.projectreactor:reactor-test:3.6.0'
     implementation 'ch.qos.logback:logback-classic:1.4.4'
 
     implementation 'org.assertj:assertj-core:3.4.1'
